Update PPI file, create network visualizations

--- a/appyters/Gene_Network_Analysis/create_edge_files.ipynb
+++ b/appyters/Gene_Network_Analysis/create_edge_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -453,20 +453,20 @@
        "[5 rows x 26415 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_feather(\"human_correlation_feather\")\n",
+    "df = pd.read_feather(\"human_correlation_archs4.f\")\n",
     "print(df.shape)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
     "# initialize dict\n",
     "top_corr = {}\n",
     "\n",
-    "top_n = 10\n",
+    "top_n = 500\n",
     "\n",
     "for i in range(len(names)):\n",
     "    col = df[names[i]]\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "[5 rows x 26415 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
